--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /Projects/NDinjectTests/obj
 /BuildModelResult.xml
 /BuildModelResult.log
+/BuildProjectResult.err.xml
+/BuildModelResult.err.xml
+/BuildProjectResult.log
+/BuildProjectResult.xml
